# option-implied-moments

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.ja.md  README.md  example.ipynb  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: risk_neutral_moments.py  typedefs.pxd
src/ext/: omp_utils.pyx  trapezoid_core.c  trapezoid_core.h  trapezoid_rnm.pyx
src/option_implied_moments/: option_implied_moments.py  risk_neutral_moments.py
src/option_implied_moments/assets/: fake_options_data.parquet
src/option_implied_moments/ext/: omp_utils.c  trapezoid_core.c  trapezoid_rnm.c  trapezoid_rnm.pyx
tests/: CMakeLists.txt  conftest.py  test.c  test.h  test_option_implied_moments.py  test_risk_neutral_moments.py
tests/ext/: test_trapezoid_core.c  test_trapezoid_rnm.py
