[build-system]
requires = ["scikit-build-core", "cython>=3.1.3", "numpy>=2.2.6"]
build-backend = "scikit_build_core.build"

[project]
name = "option-implied-moments"
version = "1.0.0"
description = "A package containing algorithms to compute higher order moments implied from option prices."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.2.6",
    "polars>=1.38.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Repository = "https://github.com/justkroft/option-implied-moments"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pytest>=8.4.1",
    "ruff>=0.15.4",
    "scikit-build-core>=0.11.6",
    "cython>=3.1.3",
    "cython-lint>=0.16.7",
]

[tool.scikit-build]
wheel.packages = ["src/option_implied_moments/"]

# Tells scikit-build-core to use the installed Cython rather than fetching one
[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
Python_EXECUTABLE = "${SKBUILD_PYTHON_EXECUTABLE}"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "ARG", # flake8-unused arguments
    "BLE", # blind-except
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # sort imports
    "RET", # flake8-return
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E731",   # Do not assign a lambda expression, use a def
    "E999",   # Cython unexpected toker error
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files.
"__init__.py" = ["F401", "W292"]

# Do not require typehinting for unit-tests, allow unused arguments
"tests/*.py" = ["ANN", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.cython-lint]
max-line-length = 88
ignore = [
    "E731",
    "E999",
    "W503",
    "W504"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
